syntax = "proto3";

option go_package = "github.com/apriliantocecep/posfin-blog/services/article/pkg/pb";

service ArticleService {
  rpc SubmitArticle(SubmitArticleRequest) returns (SubmitArticleResponse);
  rpc PublishArticle(PublishArticleRequest) returns (PublishArticleResponse);
  rpc GetArticles(GetArticlesRequest) returns (GetArticlesResponse);
}

message SubmitArticleRequest {
  string title = 1;
  string author = 2;
  string html_content = 3;
  string user_id = 4;
}

message SubmitArticleResponse {
  string article_id = 1;
  string status = 2;
}

message PublishArticleRequest {
  string article_id = 1;
  string user_id = 2;
}

message PublishArticleResponse {
  string status = 1;
}

message GetArticlesRequest {
  string user_id = 1;
}

message GetArticlesResponse {
  repeated Article articles = 1;
}

message Article {
  string id = 1;
  string status = 2;
  string content = 3;
  string user_id = 4;
}